# serializer version: 1
# name: TestSonicManiaGenerator.test_generate
  tuple(
    list([
      '/userdata/roms/sonic-mania/sonic-mania',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestSonicManiaGenerator.test_generate[settings]
  '''
  [Game]
  devMenu = y
  faceButtonFlip = n
  enableControllerDebugging = n
  disableFocusPause = n
  region = -1
  language = 0
  
  [Video]
  windowed = n
  border = n
  exclusiveFS = y
  vsync = y
  tripleBuffering = n
  winWidth = 848
  winHeight = 480
  refreshRate = 60
  shaderSupport = y
  screenShader = 1
  maxPixWidth = 0
  
  [Audio]
  streamsEnabled = y
  streamVolume = 1.000000
  sfxVolume = 1.000000
  
  
  '''
# ---
# name: TestSonicManiaGenerator.test_generate_config[{'smania_buffering': 'y'}]
  '''
  [Game]
  devMenu = y
  faceButtonFlip = n
  enableControllerDebugging = n
  disableFocusPause = n
  region = -1
  language = 0
  
  [Video]
  windowed = n
  border = n
  exclusiveFS = y
  vsync = y
  tripleBuffering = y
  winWidth = 848
  winHeight = 480
  refreshRate = 60
  shaderSupport = y
  screenShader = 1
  maxPixWidth = 0
  
  [Audio]
  streamsEnabled = y
  streamVolume = 1.000000
  sfxVolume = 1.000000
  
  
  '''
# ---
# name: TestSonicManiaGenerator.test_generate_config[{'smania_language': '1'}]
  '''
  [Game]
  devMenu = y
  faceButtonFlip = n
  enableControllerDebugging = n
  disableFocusPause = n
  region = -1
  language = 1
  
  [Video]
  windowed = n
  border = n
  exclusiveFS = y
  vsync = y
  tripleBuffering = n
  winWidth = 848
  winHeight = 480
  refreshRate = 60
  shaderSupport = y
  screenShader = 1
  maxPixWidth = 0
  
  [Audio]
  streamsEnabled = y
  streamVolume = 1.000000
  sfxVolume = 1.000000
  
  
  '''
# ---
# name: TestSonicManiaGenerator.test_generate_config[{'smania_vsync': 'n'}]
  '''
  [Game]
  devMenu = y
  faceButtonFlip = n
  enableControllerDebugging = n
  disableFocusPause = n
  region = -1
  language = 0
  
  [Video]
  windowed = n
  border = n
  exclusiveFS = y
  vsync = n
  tripleBuffering = n
  winWidth = 848
  winHeight = 480
  refreshRate = 60
  shaderSupport = y
  screenShader = 1
  maxPixWidth = 0
  
  [Audio]
  streamsEnabled = y
  streamVolume = 1.000000
  sfxVolume = 1.000000
  
  
  '''
# ---
# name: TestSonicManiaGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'menu': 'KEY_ENTER',
      'pause': 'KEY_ENTER',
    }),
    'name': 'sonic_mania',
  })
# ---
